Update markup for grilled wings recipe
Update text and organize everything with UL and OL elements

--- a/recipes/grilled-wings.html
+++ b/recipes/grilled-wings.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grilled Wings</title>
 </head>
+
 <body>
     <h1>Grilled Wings</h1>
-    <p>Marinade overnight
-        1kg chicken mid-wings
-        3 tbsp extra virgin olive oil
-        2 tbsp tomato puree (double strength)
-        2 tbsp greek yoghurt
-        2 tsp minced garlic
-        1tsp red pepper flake
-        1 tsp cumin
-        1/2 tsp sumac
-        1/2 tsp urfa pepper flakes
-        2 tsp kosher salt
-        
-        Cook
-        Cook on very high heat for a minimum of 8 minutes, turning once every minute. When possible make slits in the chicken.
-        
-        When cooking in oven, turn every 3 minutes on the highest heat for a total of 12 minutes.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1kg chicken mid-wings</li>
+        <li>3 tbsp extra virgin olive oil</li>
+        <li>2 tbsp tomato puree (double strength)</li>
+        <li>2 tbsp greek yoghurt</li>
+        <li>2 tsp minced garlic</li>
+        <li>1 tsp red pepper flake</li>
+        <li>1 tsp cumin</li>
+        <li>1/2 tsp sumac</li>
+        <li>1/2 tsp urfa pepper flakes</li>
+        <li>2 tsp kosher salt</li>
+    </ul>
+    <h2>Cooking Instructions</h2>
+    <ol>
+        <li>Marinade ingredients together. It can be left overnight but this doesn't make a difference</li>
+        <li>Chicken should be at room temperature before cooking</li>
+        <li>Cook on very high heat for a minimum of 8 minutes, turning once every minute. When possible make slits in
+            the chicken.</li>
+        <li>When cooking in oven, turn every 3 minutes on the highest heat for a total of 12 minutes.</li>
+        <li>Halfway through cooking, make slits in the wings</li>
+    </ol>
 </body>
+
 </html>
