Update index.html with new link

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/grilled-wings.html">Grilled Wings Recipe</a>
+    <ol>
+        <a href="recipes/grilled-wings.html">Grilled Wings Recipe</a>
+        <a href="recipes/grilled-mackerel.html">Grilled Mackerel Recipe</a>
+    </ol>
 </body>
 </html>
